# C-Programs

./: readme.md
CS I/Averaging Scores/: main.cpp
CS I/Color Smoosh/: smoosh.cpp
CS I/Devil's Dice/: main.cpp
CS I/Film Stats/: FilmStats.cpp  filmMain.cpp  topFilms.txt
CS I/How a Dog's Brain Works/: main.cpp
CS I/Mandelbrots/: main.cpp
CS II/Abstract Geometry/: Geometry.h  Sphere.cpp  Sphere.h  main.cpp
CS II/Assignment 1 - Bug Collection/: Bug.cpp  main.cpp
CS II/Assignment 1 -- Bug Collection/: Bug.hpp  TestCases.hpp
CS II/Assignment 2 - Sorting Stats/: timing.cpp
CS II/Assignment 3 - Frequency Analysis/: TestCases.hpp  main.cpp
CS II/Assignment 3 -- Frequency Analysis/: TestCases.cpp
CS II/Assignment 4 - Rational Numbers/: Rational.cpp
CS II/Assignment 4 -- Rational Numbers/: Rational.hpp  main.cpp
CS II/Assignment 5 -- Rational Numbers Part 2/: Rational.cpp
CS II/Assignment 7 -- Abstract Geometry/: Box.cpp
CS II/Assignment 8 - Spell Checker/: binarySearchTree.hpp
CS II/Rational Numbers Overloads/: Rational.hpp  TestCases.hpp
CS II/Sorting Stats/: TestCases.hpp
CS III/Hashing Poetry/: FirstWordInfo.cpp  FirstWordInfo.h  HashTable.h  SecondWordInfo.cpp  SecondWordInfo.h  main.cpp  readme.txt
CS III/Priority Queues/: ItemType.h  Node.h  PQ.h  PQHeap.cpp  PQHeap.h  TestPQ.cpp
CS III/Program 3 - AVL/: Board.cpp  (+1 more)
CS Methods/: readme.md
operating_systems/Generating Pi - 4 Cores/src/: CMakeLists.txt  main.cpp  map.cpp  map.hpp  piTemplate.txt  printPi.cpp  printPi.hpp  threadQueue.cpp  threadQueue.hpp  threadTask.cpp  threadTask.hpp
(+218 files in other folders)
